--- a/content/4_implementierung/implementierung.tex
+++ b/content/4_implementierung/implementierung.tex
@@ -43,10 +43,10 @@
 		Wie im Abschnitt \vref{ss:struktur} angetönt erfolgt die Bewegungsdetektion in zwei Schritten. Im ersten werden die Schwellen für eine ruhende Position des \gls{g:myrio} ermittelt. Diese dienen bei der Signalverarbeitung als Vergleichswert, was das Erkennen einer Bewegung ermöglicht. Begründet durch diese Aufteilung, kann dieser Vorgang nicht in einem einzelnen \gls{ac:vi} erfolgen, sondern muss durch einzelne vorhandene Komponenten umgesetzt werden.	
 	%
 	\subsection{Berechnung der Bewegung}\label{ss:implementierung_int}
-		Für die zweifache Integration werden \acrshort{ac:iir}-Filter eingesetzt, die durch eine Bilineare-Transformation eines Integrators bestimmt werden. \gls{g:labview} bietet eine \gls{ac:vi} namens \texttt{Discrete Zero-Pole-Gain.vi}, die es erlaubt, direkt die Filterkoeffizienten anzugeben. Die Implementierung ist  in Gleichung \vref{eq:irr_filter} dargestellt. Zu beachten ist, dass für die Darstellung, im Gegensatz zur Gleichung \vref{eq:int_filter} im Konzept, die Pol-Nullstellen-Form verwendet wird.
+		Für die zweifache Integration werden \acrshort{ac:iir}-Filter eingesetzt, die durch eine Bilineare-Trans\-for\-ma\-ti\-on eines Integrators bestimmt werden. \gls{g:labview} bietet eine \gls{ac:vi} namens \texttt{Discrete Zero-Pole-Gain.vi}, die es erlaubt, direkt die Filterkoeffizienten anzugeben. Die Implementierung ist  in Gleichung \vref{eq:irr_filter} dargestellt. Zu beachten ist, dass für die Darstellung, im Gegensatz zur Gleichung \vref{eq:int_filter} im Konzept, die Pol-Nullstellen-Form verwendet wird.
 		%
 		\formula{
-		&H(z)=k\cdot\frac{(z-Z_1)(z-Z_2)\ldots (z-Z_m)}{(z-P_1)(z-P_2)\ldots (z-P_n})\\[2ex]
+		&H(z)=k\cdot\frac{(z-Z_1)(z-Z_2)\ldots (z-Z_m)}{(z-P_1)(z-P_2)\ldots (z-P_n)}\\[2ex]
 		&\Longrightarrow H(z)=\frac{T_a}{2}\cdot\frac{z+1}{z-1}
 		}{
 		k & Verstärkungsfaktor\\
@@ -69,7 +69,7 @@
 			%
 			\begin{itemize}
 				\item \textbf{Hardware Taster} Für eine Reinitialisierung beim Messaufbau kann der Taster \textsf{Button0} am Gehäuse des \gls{g:myrio} betätigt werden.
-				\item \textbf{Software Taster} Erfolgt die Bedienung entfernt vom Messaufbau via \gls{g:host}, so bietet die \textit{RT Main}-\gls{ac:vi} einen entsprechenden Taster.
+				\item \textbf{Software Taster} Erfolgt die Bedienung entfernt vom Messaufbau via \gls{g:host}, so bietet die \texttt{RT Main}-\gls{ac:vi} einen entsprechenden Taster.
 			\end{itemize}
 			%
 			Implementiert wird diese Funktion zum einen mit einer speziellen \gls{ac:vi} des \gls{g:myrio} für das Abfragen des Tasters und zum anderen mit einer \gls{ac:vi} für die Flankenerkennung (\texttt{Edge Detect.vi}). Der Software Taster wird mit diesem Aufbau durch ein ODER-Gatter verknüpft. Die Abbildung \vref{img:state_switch} zeigt das gesamte Konstrukt.
@@ -99,12 +99,12 @@
 		\subsubsection*{Bewegungs-Zustand}
 			Die Signalverarbeitung erfolgt, wie in Abschnitt \vref{ss:struktur} genau beschrieben, Sample-basiert. Sie umfasst 3 Schritte, für deren korrekte Funktionalität eine Initialisierung benötigt wird (erfolgt durch einen Wechsel in den \textsf{Initialisierungs-Zustand}). Die erforderlichen Daten des vorherigen Zustandes werden durch Schieberegister übertragen. Die Abbildung \vref{img:sig_phase} zeigt den vollständigen Zustand, inklusive Schieberegister (orange, horizontale Linien).
 			%
-			\image{content/4_implementierung/image/progress_phase}{scale=.7}{htbp}[Signalverarbeitungs-Zustand][img:sig_phase]
+			\image{content/4_implementierung/image/progress_phase}{scale=.68}{htbp}[Signalverarbeitungs-Zustand][img:sig_phase]
 			%
 			\begin{enumerate}
 				\item Rotation \texttt{Rot.vi}: Erfolgt analog mit derselben \gls{ac:vi} wie im \textsf{Initialisierungs-Zustand}. Die benötigte Rotationsmatrix wird vom vorherigen Zustand durch ein Schieberegister übernommen. 
 				%
-				\item Integration \texttt{Inta.vi}: Für die Wegbestimmung muss die Beschleunigung zweifach integriert werden. Zuvor erfolgt noch eine Auswertung der aktuellen Standardabweichung (ermittelt mit der \gls{ac:vi} \texttt{Standard Deviation PtByPt.vi}), die mit der Standardabweichung des während des \textsf{Initialisierungs-Zustandes} aufgenommenen Segments verglichen wird. Fällt sie höher aus, kann von einer Bewegung ausgegangen werden. Die folgende Integration wird, wie zuvor in Abschnitt \vref{ss:implementierung_int} beschrieben, durch jeweils zwei \acrshort{ac:iir}-Filter bewerkstelligt. Speziell zu beachten ist, dass im Falle der ruhenden Position (keine Bewegung detektiert) der zurückgelegte Weg gleichwohl angezeigt werden muss. Für dieses Verhalten wird eine \textsf{Feedback Node} \gls{ac:vi} eingesetzt.
+				\item Integration \texttt{Inta.vi}: Für die Wegbestimmung muss die Beschleunigung zweifach integriert werden. Zuvor erfolgt noch eine Auswertung der aktuellen Standardabweichung (ermittelt mit der \gls{ac:vi} \texttt{Standard Deviation PtByPt.vi}), die mit der Standardabweichung des während des \textsf{Initialisierungs-Zustandes} aufgenommenen Segments verglichen wird. Fällt sie höher aus, kann von einer Bewegung ausgegangen werden. Die folgende Integration wird, wie zuvor in Abschnitt \vref{ss:implementierung_int} beschrieben, durch jeweils zwei \acrshort{ac:iir}-Filter bewerkstelligt. Speziell zu beachten ist, dass im Falle der ruhenden Position (keine Bewegung detektiert) der zurückgelegte Weg gleichwohl angezeigt werden muss. Für dieses Verhalten wird eine \textsf{Feedback Node} \gls{ac:vi} eingesetzt. Der gesamte Aufbau ist in der Abbildung \vref{img:inta} dargestellt.
 					%
 					\image{content/4_implementierung/image/inta}{scale=.7}{htbp}[Integration][img:inta]
 				%
@@ -160,7 +160,7 @@
 				\item Die beiden Text-Labels \textsf{x} und \textsf{y} zeigen die aktuelle Position an.
 			\end{enumerate}
 			%
-			\image{content/4_implementierung/image/front_host}{scale=.7}{htbp}[Frontpanel \gls{g:host}][img:front_host]
+			\image{content/4_implementierung/image/front_host}{scale=.7}{t}[Frontpanel \gls{g:host}][img:front_host]
 %
 %
 % Bedienung
@@ -181,12 +181,12 @@
 	Um eine Aussage bezüglich der Güte der Implementierung machen zu können, muss diese mit dem Konzept verglichen werden. Dazu müssen identische Rohdaten durch die beiden Abläufe (\gls{g:matlab}-Skript \texttt{Check\_Translation\_Rotation\_final.m} und \gls{g:labview}-Projekt \texttt{reametric}) verarbeitet und die Ergebnisse einander gegenübergestellt werden\footnote{Durch die Tatsache, dass das \gls{g:matlab}-Skript Segment-basiert und die Implementierung Sample-basiert arbeiten, können nicht dieselben Daten verwendet werden - Dies hätte eine Änderung der Implementierung oder des Konzepts zur Folge. Deshalb werden zwei unabhängige Messungen unter den identischen Bedingungen durchgeführt und ausgewertet.}. Angelehnt an die drei Protokolle in den Abschnitten \ref{s:verifikation_rotation} bis \ref{s:verifikation_transaltion_rotation} werden dabei speziell \textsf{Rotation}, \textsf{Translation} und \textsf{Rotation, Translation überlagert} kontrolliert\footnote{Aufgrund der negativen Ergebnisse der Protokolle wird auf ein detailliertes Wiederholen verzichtet und die Implementierung im Ansatz überprüft.}.
 	%
 	\subsection*{Schätzung Rotationswinkel und Rotation}
-		Für das Überprüfen der Rotationswinkel und der anschliessenden Rotation wird eine statische Messung in z-Position (erläutert in Abschnitt \vref{ss:methode_tran}, Testbeschreibung) durchgeführt. Die Kontrolle beschränkt sich auf das Endergebnis der Rotation, das $a_{Soll}=[0\quad0\quad 9.81]^T$ sein sollte.\par
+		Für das Überprüfen der Rotationswinkel und der anschliessenden Rotation wird eine statische Messung in z-Position (erläutert in Abschnitt \vref{ss:methode_tran}, Testbeschreibung) durchgeführt. Die Kontrolle beschränkt sich auf das Endergebnis der Rotation, das $a_{Soll}=[0\quad0\quad 9.81]^\top$ sein sollte.\par
 		%
-		Wie erwartet liefert das Konzept ein ähnliches Resultat von $a_{Konzept} = [-0.004\quad0.004\quad9.971]^T$. Unter den gleichen Bedingungen errechnet die Implementierung einen Beschleunigungsvektor von $a_{Implementation}=[0.008\quad0.013\quad9.934]^T$. Vergleicht man die beiden Resultate, kann man auf eine korrekte Implementierung des Konzepts schliessen. Die geringen Abweichungen könnten darin begründet sein, dass die Auflösung der verwendeten Datentypen sich in \gls{g:matlab} und \gls{g:labview} unterscheiden. 
+		Wie erwartet liefert das Konzept ein ähnliches Resultat von $a_{Kon.} = [-0.004\quad0.004\quad9.971]^\top$. Unter den gleichen Bedingungen errechnet die Implementierung einen Beschleunigungsvektor von $a_{Impl.}=[0.008\quad0.013\quad9.934]^\top$. Vergleicht man die beiden Resultate, kann man auf eine korrekte Implementierung des Konzepts schliessen. Die geringen Abweichungen könnten darin begründet sein, dass die Auflösung der verwendeten Datentypen sich in \gls{g:matlab} und \gls{g:labview} unterscheiden. 
 	%	
 	\subsubsection*{Translation}
-		Wiederum werden zwei Messungen in der z-Position durchgeführt. Zusätzlich zu der \textsf{Kalibrationsphase} wird nun noch eine Translation in der \gls{g:transversalebene} von \unit[5.0]{cm} in y-Richtung durchgeführt (Bewegungszeit \unit[1]{s}). Erwartet wird ein zurückgelegter Weg von \unit[5.0]{cm} (mit einer Abweichung von $\pm$\unit[1.0]{cm}) in der gefahrenen Richtung.\par
+		Wiederum werden zwei Messungen in der z-Position durchgeführt. Zusätzlich zu der \textsf{Kalibrationsphase} wird nun noch eine Translation in der \gls{g:transversalebene} von \unit[5.0]{cm} in y-Richtung durchgeführt (Bewegungszeit \unit[1.0]{s}). Erwartet wird ein zurückgelegter Weg von \unit[5.0]{cm} (mit einer Abweichung von $\pm$\unit[1.0]{cm}) in der gefahrenen Richtung.\par
 		%
 		Gemittelt über fünf Messungen ergibt das Konzept ein äquivalentes Resultat, wie im Protokoll in Abschnitt \vref{s:verifikation_translation} beschrieben. Die ermittelte Strecke beläuft sich auf \unit[4.31]{cm}. Die Implementierung dagegen liefert ein um Faktor 1'000 kleineres Resultat. Dazu wird die Auslenkung nur in eine Richtung detektiert. Eine Translation zurück zum Ursprung der Messung hat demzufolge eine entgegengesetzte Bewegung zur Folge. Die Unterscheidung hinsichtlich der gefahrenen Achse x und y wird dagegen korrekt erkannt.\par
 		%
