zero digits for time units

--- a/content/1_einleitung/einleitung.tex
+++ b/content/1_einleitung/einleitung.tex
@@ -87,7 +87,7 @@ In der letzten betrachteten Arbeit der Universität Coimbra in Portugal wird das 
 \subsubsection*{Zeitplan}
 	Aus den definierten \gls{ac:ap} wird ein entsprechender Zeitplan erstellt. Dabei wird der chronologische Ablauf des Ablaufplans eingehalten. Wie der Abbildung \vref{img:zeitplan} zu entnehmen ist, werden keine Bufferzeiten eingeplant. Dies, weil die Projektdauer, bezogen auf die Aufgabenstellung, schon knapp ausfällt und daher jede Verzögerung den Erfolg des Projekts gefährden würde.
 	%
-	\image{content/1_einleitung/image/zeitplan}{scale=1}{htbp}[Zeitplan][img:zeitplan] 
+	\image{content/1_einleitung/image/zeitplan}{scale=1}{t}[Zeitplan][img:zeitplan] 
 %
 %
 \subsubsection*{Meilensteine}
@@ -130,7 +130,7 @@ Der Zeitplan konnte nicht eingehalten werden. Auf Abweichungen wird im Abschnitt
 			\item Vertikaler Versatz z von bis zu $-$\unit[0.7]{cm}
 		\end{itemize}
 		Die drei Auslenkungen kombiniert ergeben einen kreisbogenförmigen Verlauf, der in der Abbildung \vref{img:knie_auslenkung} rot punktiert dargestellt ist. Dadurch, dass für eine Beurteilung des Heilprozesses des Kreuzbandes nur die seitliche Auslenkung y in der \gls{g:transversalebene} interessiert, kann der Bewegungsablauf auf eine horizontale Bewegung in der x-y-Ebene reduziert werden. Somit ergibt sich für das vorliegende Projekt eine 1-dimensionale Messung auf der y-Achse in einem Bereich von \unit[5.0]{cm}.
-		\image{content/3_konzept/image/knie_bewegung}{scale=0.55}{htbp}[Auslenkung Knie][img:knie_auslenkung]
+		\image{content/3_konzept/image/knie_bewegung}{scale=0.6}{htbp}[Auslenkung Knie][img:knie_auslenkung]
 	%
 	\subsection{Messgenauigkeit}\label{ss:messgenauigkeit}
 		Die Beurteilung des Zustandes der Knieverletzung erfolgt binär. Entweder das Knie ist geheilt und der Sportler kann das Training aufnehmen, oder die Genesung ist noch nicht abgeschlossen. Daher muss die Genauigkeit lediglich ausreichen, um eine Extraktion dieser beiden Fälle zu ermöglichen. Die Genauigkeit wird auf Grund dieser Fakten auf $\pm$ \unit[1.0]{cm} festgelegt\footnote{Dieser Wert ist eine Annahme und müsste durch eine Fachperson bestätigt werden}.
